# PySap

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements-dev.txt
demo/: demo_a.py
docs/: CHANGELOG.md  DEMO-PASO-A-PASO.md  GUIA-FUNCIONAMIENTO.md
docs/decisions/: ADR-0001-stack-y-arquitectura.md  ADR-0002-estabilidad-conexion-feedback.md  ADR-0003-arranque-y-login.md  ADR-0004-codegen-pdf-wrappers.md  ADR-0005-mapping-pageobject-validacion.md  ADR-0006-busqueda-robusta-componentes.md  ADR-0007-credenciales-desde-settings.md  README.md
pysap/: __init__.py  config.py
pysap/codegen/: __init__.py  emitter.py  generate.py  normalize.py  pdf_parser.py  text_extract.py  typemap.py
pysap/mapping/: __init__.py  page_object.py  registry.py
pysap/objects/: __init__.py  base.py  gui_application.py  gui_application.pyi  gui_button.py  gui_button.pyi  gui_c_text_field.py  gui_c_text_field.pyi  gui_check_box.py  gui_check_box.pyi  gui_combo_box.py  gui_combo_box.pyi  gui_connection.py  gui_connection.pyi  gui_grid_view.py  gui_grid_view.pyi  gui_main_window.py  gui_main_window.pyi  gui_password_field.py  gui_password_field.pyi  gui_radio_button.py  gui_radio_button.pyi  gui_session.py  gui_session.pyi  gui_statusbar.py  gui_statusbar.pyi  gui_textfield.py  gui_tree.py  gui_tree.pyi
pysap/process/: __init__.py  process.py  step.py
pysap/runtime/: __init__.py  bootstrap.py  connector.py  errors.py  feedback.py  launcher.py  session.py
scripts/: buscar_id_parcial.py  diagnostico_sap.py  open_sap.py
tests/: conftest.py
vbs/: Script1.vbs
(+24 files in other folders)
